feat: complete header

--- a/sources/src/sass/base/_layout.scss
+++ b/sources/src/sass/base/_layout.scss
@@ -20,11 +20,10 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  // color: var(--color_white);
-  // background: var(--color_dark_bg);
-  // font-family: var(--montserrat);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: $font_text;
+  color: $color_grey;
 }
 
 body.lock {
@@ -33,26 +32,18 @@ body.lock {
 
 .container {
   width: 100%;
-  max-width: 1920px;
+  max-width: 1532px;
   min-width: 320px;
   margin: 0 auto;
   padding: 0 40px;
 
-  // @include r(1700px) {
-  //   padding: 0 80px;
-  // }
+  @include sm {
+    padding: 0 20px;
+  }
 
-  // @include lg {
-  //   padding: 0 60px;
-  // }
-
-  // @include md {
-  //   padding: 0 40px;
-  // }
-
-  // @include xxs {
-  //   padding: 0 15px;
-  // }
+  @include xs {
+    padding: 0 15px;
+  }
 }
 
 a {
@@ -87,7 +78,7 @@ ul {
 
 button,
 input {
-  // font-family: var(--montserrat);
+  padding: 0;
   border: none;
   appearance: none;
   outline: none;
