--- a/sources/src/sass/base/_vars.scss
+++ b/sources/src/sass/base/_vars.scss
@@ -2,7 +2,9 @@
 $color_white: #fff;
 $color_black: #000;
 $color_grey: #35383f;
+$color_grey_light: #f2f2f2;
 $color_blue: #002f6c;
+$color_blue_hover: #6682a6;
 
 // fonts
 $font_text: "Noto Sans", sans-serif;
