--- a/sources/src/sass/blocks/_header.scss
+++ b/sources/src/sass/blocks/_header.scss
@@ -1,3 +1,228 @@
-header {
-  padding: 20px;
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+}
+
+.header__container {
+  min-height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0 40px;
+}
+
+.header__burger_btn {
+  flex-shrink: 0;
+  z-index: 3;
+  width: 28px;
+  height: 28px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  // padding-right: 45px;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+
+  @include lg {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: all;
+  }
+
+  &.active {
+    .header__icon {
+      span {
+        opacity: 0;
+      }
+
+      &::after,
+      &::before {
+        transform: translateY(0);
+      }
+
+      &::after {
+        transform: rotate(45deg);
+      }
+
+      &::before {
+        transform: rotate(-45deg);
+      }
+    }
+  }
+
+  @media (hover: hover) {
+    &:hover {
+      .header__icon {
+        span,
+        &::before,
+        &::after {
+          background-color: $color_blue_hover;
+        }
+      }
+    }
+  }
+}
+
+.header__icon {
+  position: relative;
+  display: inline-block;
+  width: 21px;
+  height: 14px;
+
+  span {
+    position: absolute;
+    left: 0;
+    top: 6px;
+    display: inline-block;
+    width: 100%;
+    height: 2px;
+    background-color: $color_blue;
+    border-radius: 2px;
+    transition: opacity 0.2s ease-out, color 0.2s ease-out;
+  }
+
+  &::after,
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 6px;
+    display: inline-block;
+    width: 100%;
+    height: 2px;
+    background-color: $color_blue;
+    border-radius: 2px;
+    transition: transform 0.2s ease-out, background-color 0.2s ease-out;
+  }
+
+  &::before {
+    transform: translateY(-6px);
+  }
+
+  &::after {
+    transform: translateY(6px);
+  }
+}
+
+.header__nav {
+  height: 100%;
+
+  @include lg {
+    position: fixed;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    z-index: 2;
+    padding-top: 90px;
+    background-color: $color_white;
+    transition: transform 0.3s ease-out;
+    background-color: aqua;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 90px;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background-color: $color_grey_light;
+    }
+
+    &.active {
+      transform: translateX(-100%);
+    }
+  }
+}
+
+.header__list {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0 31px;
+
+  a {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 23px;
+    color: $color_blue;
+    transition: color 0.2s ease-out;
+
+    @media (hover: hover) {
+      &:hover {
+        color: $color_blue_hover;
+      }
+    }
+  }
+
+  @include lg {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 0;
+    overflow-y: auto;
+
+    a {
+      display: inline-block;
+      padding: 32px 0;
+    }
+  }
+}
+
+.header__lang {
+  position: relative;
+  z-index: 3;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  gap: 0 4px;
+  font-weight: 500;
+  font-size: 18px;
+  color: $color_blue;
+  cursor: pointer;
+
+  span {
+    position: relative;
+    transition: color 0.2s ease-out;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: $color_blue;
+      transition: background-color 0.2s ease-out;
+    }
+  }
+
+  svg {
+    path {
+      transition: all 0.2s ease-out;
+    }
+  }
+
+  @media (hover: hover) {
+    &:hover {
+      span {
+        color: $color_blue_hover;
+
+        &::after {
+          background-color: $color_blue_hover;
+        }
+      }
+
+      svg {
+        path {
+          fill: $color_blue_hover;
+        }
+      }
+    }
+  }
 }
