--- a/sources/src/pug/base/_layout.pug
+++ b/sources/src/pug/base/_layout.pug
@@ -29,6 +29,10 @@ html(lang="ru")
         meta(name="msapplication-config" content="images/favicons/browserconfig.xml")
         meta(name="theme-color" content="#ffffff")
 
+        link(rel='preload' href='fonts/noto-sans-v35-cyrillic_latin-regular.woff2' as='font' type='font/woff2' crossorigin='')
+        link(rel='preload' href='fonts/noto-sans-v35-cyrillic_latin-500.woff2' as='font' type='font/woff2' crossorigin='')
+        link(rel='preload' href='fonts/noto-sans-v35-cyrillic_latin-600.woff2' as='font' type='font/woff2' crossorigin='')
+        link(rel='preload' href='fonts/neucha-v17-cyrillic_latin-regular.woff2' as='font' type='font/woff2' crossorigin='')
         link(rel="stylesheet" href="css/main.min.css")
 
     body
