--- a/sources/src/pug/base/_mixins.pug
+++ b/sources/src/pug/base/_mixins.pug
@@ -21,6 +21,17 @@ mixin picture(name,ext,x2)
             img.picture__img.object-fit-cover(src="images/" + name + "." + ext srcset="images/" + name + "." + ext + ", images/" + name + "@2x." + ext + " 2x" alt="")
 
 
+mixin pictureNew(name, ext, altText, big_size, mid_size, sm_size, width, height, customClass)
+    -
+        var sourceSrcset = `images/${name}_${sm_size}.webp ${sm_size}w, images/${name}_${mid_size}.webp ${mid_size}w, images/${name}_${big_size}.webp ${big_size}w`
+        var sizes = `(max-width: ${big_size}px) 100vw, ${big_size}px`
+        var imgSrcset = `images/${name}_${sm_size}.${ext} ${sm_size}w, images/${name}_${mid_size}.${ext} ${mid_size}w, images/${name}_${big_size}.${ext} ${big_size}w`
+
+    picture(class = customClass)
+        source(srcset= sourceSrcset type="image/webp")
+        img(sizes= sizes srcset= imgSrcset alt= altText width= width height= height)
+
+
 mixin breadcrumbs(arr,cur)
     .b-breadcrumbs
         .container
@@ -38,19 +49,19 @@ mixin pagination(amount, current, ellipsis, last, arrows)
 
         ul.pagination__list
             - for (var index = 1; index <= amount; index++)
-                    if (index === current)
-                        li.pagination__item.current
-                            span= index
-                    else if (index === ellipsis)
-                        li.pagination__item
-                            a(href="#").is-collapsed ...
-                    else
-                        li.pagination__item
-                            a(href="#")= index
-
-            - for (var index = last; index <= last; index++)
+                if (index === current)
+                    li.pagination__item.current
+                        span= index
+                else if (index === ellipsis)
+                    li.pagination__item
+                        a(href="#").is-collapsed ...
+                else
                     li.pagination__item
                         a(href="#")= index
+
+            - for (var index = last; index <= last; index++)
+                li.pagination__item
+                    a(href="#")= index
 
         if (arrows === true)
             a(href="#").pagination__next: span
