--- a/sources/src/sass/base/_layout.scss
+++ b/sources/src/sass/base/_layout.scss
@@ -3,6 +3,7 @@
 @import "./mixins";
 @import "./fonts";
 @import "./sprite_generated";
+@import "./general";
 
 // From libs:
 //@import "../libs/LIB_NAME/path/to/style.scss"
@@ -39,10 +40,6 @@ body.lock {
 
   @include sm {
     padding: 0 20px;
-  }
-
-  @include xs {
-    padding: 0 15px;
   }
 }
 
@@ -83,6 +80,11 @@ input {
   appearance: none;
   outline: none;
   background-color: transparent;
+}
+
+button,
+a {
+  cursor: pointer;
 }
 
 :active,
