--- a/sources/src/sass/base/_vars.scss
+++ b/sources/src/sass/base/_vars.scss
@@ -3,8 +3,14 @@ $color_white: #fff;
 $color_black: #000;
 $color_grey: #35383f;
 $color_grey_light: #f2f2f2;
+$color_grey_light_2: #d6def8;
+$color_grey_light_3: #f6f6f6;
 $color_blue: #002f6c;
 $color_blue_hover: #6682a6;
+$color_puprple_light: #d6def8;
+$color_brown: #cb6015;
+$color_brown_light: #fdf7f2;
+$color_brown_btn: #fac39c;
 
 // fonts
 $font_text: "Noto Sans", sans-serif;
