--- a/sources/src/sass/main.sass
+++ b/sources/src/sass/main.sass
@@ -4,6 +4,22 @@
 
 @import "./blocks/main"
 
+@import "./blocks/intro"
 
+@import "./blocks/production"
+
+@import "./blocks/about"
+
+@import "./blocks/recipes"
+
+@import "./blocks/where_to_buy"
+
+@import "./blocks/news"
+
+@import "./blocks/feedback"
+
+@import "./blocks/presentation"
+
+@import "./blocks/goods"
 
 @import "./blocks/footer"
