--- a/sources/src/pug/base/_mixins.pug
+++ b/sources/src/pug/base/_mixins.pug
@@ -26,10 +26,11 @@ mixin pictureNew(name, ext, altText, big_size, mid_size, sm_size, width, height,
         var sourceSrcset = `images/${name}_${sm_size}.webp ${sm_size}w, images/${name}_${mid_size}.webp ${mid_size}w, images/${name}_${big_size}.webp ${big_size}w`
         var sizes = `(max-width: ${big_size}px) 100vw, ${big_size}px`
         var imgSrcset = `images/${name}_${sm_size}.${ext} ${sm_size}w, images/${name}_${mid_size}.${ext} ${mid_size}w, images/${name}_${big_size}.${ext} ${big_size}w`
+        var src = `images/${name}_${big_size}.${ext}`
 
     picture(class = customClass)
-        source(srcset= sourceSrcset type="image/webp")
-        img(sizes= sizes srcset= imgSrcset alt= altText width= width height= height)
+        source(sizes= sizes srcset= sourceSrcset type="image/webp")
+        img(src= src sizes= sizes srcset= imgSrcset alt= altText width= width height= height)
 
 
 mixin breadcrumbs(arr,cur)
