--- a/sources/src/sass/base/_vars.scss
+++ b/sources/src/sass/base/_vars.scss
@@ -7,6 +7,7 @@ $color_grey_light_2: #d6def8;
 $color_grey_light_3: #f6f6f6;
 $color_blue: #002f6c;
 $color_blue_hover: #6682a6;
+$color_blue_light: #198cca;
 $color_puprple_light: #d6def8;
 $color_brown: #cb6015;
 $color_brown_light: #fdf7f2;
