--- a/sources/src/sass/base/general.scss
+++ b/sources/src/sass/base/general.scss
@@ -264,6 +264,7 @@
   color: $color_white;
   border-radius: 80px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.06), 0 0 4px 0 rgba(0, 0, 0, 0.04);
+  text-wrap: nowrap;
 }
 
 .label_blue {
