--- a/sources/src/sass/main.sass
+++ b/sources/src/sass/main.sass
@@ -22,4 +22,14 @@
 
 @import "./blocks/goods"
 
+@import "./blocks/product_intro"
+
+@import "./blocks/description"
+
+@import "./blocks/ingredients"
+
+@import "./blocks/nutrients"
+
+@import "./blocks/production_more"
+
 @import "./blocks/footer"
