--- a/sources/src/pug/base/_layout.pug
+++ b/sources/src/pug/base/_layout.pug
@@ -35,7 +35,7 @@ html(lang="ru")
         link(rel='preload' href='fonts/neucha-v17-cyrillic_latin-regular.woff2' as='font' type='font/woff2' crossorigin='')
         link(rel="stylesheet" href="css/main.min.css")
 
-    body
+    body(class= pageName)
         block header
             include ../blocks/_header
 
