fix: fix all remarks by three first pages

--- a/sources/src/pug/product-presentation.pug
+++ b/sources/src/pug/product-presentation.pug
@@ -96,7 +96,7 @@ block page
                         name: 'Хлебцы Хрустящие Цельнозерновые с чесноком'
                     },
                     {
-                        labelClass: 'btn_green_light',
+                        labelClass: 'label_green_light',
                         labelName: 'Цельнозерновые',
                         imgUrl: 'goods/goods_4',
                         name: 'Хлебцы Хрустящие Цельнозерновые овсяные'
