--- a/sources/src/sass/base/general.scss
+++ b/sources/src/sass/base/general.scss
@@ -122,11 +122,12 @@
 
 // btn label
 .btn_label {
-  padding: 8px 18px;
+  padding: 7px 18px 9px;
   font-family: $font_text;
   font-weight: 500;
   font-size: 18px;
   text-align: center;
+  white-space: nowrap;
   color: $color_white;
   border-radius: 80px;
   transition: color 0.2s ease-out, background-color 0.2s ease-out;
@@ -264,7 +265,7 @@
   color: $color_white;
   border-radius: 80px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.06), 0 0 4px 0 rgba(0, 0, 0, 0.04);
-  text-wrap: nowrap;
+  white-space: nowrap;
 }
 
 .label_blue {
