--- a/sources/src/sass/blocks/news.scss
+++ b/sources/src/sass/blocks/news.scss
@@ -185,6 +185,7 @@
   background-color: $color_white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.06), 0 0 4px 0 rgba(0, 0, 0, 0.04);
   border-radius: 80px;
+  white-space: nowrap;
 }
 
 .news__info {
