--- a/sources/src/sass/blocks/product_intro.scss
+++ b/sources/src/sass/blocks/product_intro.scss
@@ -66,7 +66,7 @@
   font-weight: 500;
   font-size: 18px;
   color: $color_white;
-  text-wrap: nowrap;
+  white-space: nowrap;
   border-radius: 8px;
 
   @include xs {
