--- a/sources/src/sass/blocks/recipes.scss
+++ b/sources/src/sass/blocks/recipes.scss
@@ -237,10 +237,14 @@
   width: max-content;
   margin: 0 auto;
   background-color: $color_blue;
+  border: 2px solid $color_blue;
+  transition: color 0.2s ease-out, background-color 0.2s ease-out;
 
   @media (hover: hover) {
     &:hover {
-      background-color: $color_blue_hover;
+      // background-color: $color_blue_hover;
+      color: $color_blue;
+      background-color: $color_white;
     }
   }
 
