--- a/sources/src/pug/products.pug
+++ b/sources/src/pug/products.pug
@@ -5,26 +5,26 @@ block head
     title Выкладка продукции
 block page
 
-    section.presentation_intro
-        .presentation_intro__bg
-            +pictureNew('presentation/presentation_bg', 'png', '', 1920, 1500, 800, 1920, 945, 'presentation_intro__pic_wide')
-            +pictureNew('presentation/presentation_bg_mobile', 'jpg', '', 750, 568, 461, 700, 375, 'presentation_intro__pic_mobile')
+    section.intro_presentation
+        .intro_presentation__bg
+            +pictureNew('presentation/presentation_bg', 'jpg', '', 1920, 1450, 1000, 1920, 945, 'intro_presentation__pic_wide')
+            +pictureNew('presentation/presentation_bg_mobile', 'jpg', '', 750, 600, 375, 700, 375, 'intro_presentation__pic_mobile')
 
-        .presentation_intro__content
-            .container.presentation_intro__container
+        .intro_presentation__content
+            .container.intro_presentation__container
 
-                h1.presentation_intro__title.block__title Продукция
+                h1.intro_presentation__title.block__title Продукция
 
-                p.presentation_intro__subtitle.block__subtitle
+                p.intro_presentation__subtitle.block__subtitle
                     span Каждый найдет, что-то для
                     span себя на #[span.line_bg каждый день!]
 
-                p.presentation_intro__subtitle_mobile.block__subtitle_mobile
+                p.intro_presentation__subtitle_mobile.block__subtitle_mobile
                     span Удивляйте себя 
                     span #[span.line_bg новыми вкусовыми]
                     span сочетаниями! 
 
-                p.presentation_intro__text Наша компания началась с идеи создать здоровый продукт. И нам удалось воплотить ее в жизнь! Мы производим линейки хлебцев: Традиционная, Лайт, ФитнесЛайн, Бородинские
+                p.intro_presentation__text Наша компания началась с идеи создать здоровый продукт. И нам удалось воплотить ее в жизнь! Мы производим линейки хлебцев: Традиционная, Лайт, ФитнесЛайн, Бородинские
 
 
     .goods 
