--- a/sources/src/sass/blocks/goods.scss
+++ b/sources/src/sass/blocks/goods.scss
@@ -27,7 +27,7 @@
   align-items: center;
   gap: 0 16px;
   overflow-x: auto;
-  text-wrap: nowrap;
+  white-space: nowrap;
   padding-left: 40px;
   scroll-snap-type: x mandatory;
 
