--- a/sources/src/sass/main.sass
+++ b/sources/src/sass/main.sass
@@ -18,11 +18,11 @@
 
 @import "./blocks/feedback"
 
-@import "./blocks/presentation"
+@import "./blocks/intro_presentation"
 
 @import "./blocks/goods"
 
-@import "./blocks/product_intro"
+@import "./blocks/intro_product"
 
 @import "./blocks/description"
 
