--- a/sources/src/sass/base/general.scss
+++ b/sources/src/sass/base/general.scss
@@ -172,7 +172,7 @@
 
   @media (hover: hover) {
     &:hover {
-      color: $color_white;
+      color: $color_grey;
       background-color: $color_grey_light;
     }
   }
