--- a/sources/src/sass/blocks/intro_presentation.scss
+++ b/sources/src/sass/blocks/intro_presentation.scss
@@ -1,4 +1,4 @@
-.presentation_intro {
+.intro_presentation {
   position: relative;
   padding: 341px 0 250px;
   min-width: 320px;
@@ -13,7 +13,7 @@
   }
 }
 
-.presentation_intro__bg {
+.intro_presentation__bg {
   position: absolute;
   top: 0;
   left: 0;
@@ -22,23 +22,23 @@
   height: 100%;
 }
 
-.presentation_intro__pic_wide,
-.presentation_intro__pic_wide img,
-.presentation_intro__pic_mobile,
-.presentation_intro__pic_mobile img {
+.intro_presentation__pic_wide,
+.intro_presentation__pic_wide img,
+.intro_presentation__pic_mobile,
+.intro_presentation__pic_mobile img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.presentation_intro__pic_wide {
+.intro_presentation__pic_wide {
   @include xs {
     display: none;
   }
 }
 
-.presentation_intro__pic_mobile {
+.intro_presentation__pic_mobile {
   display: none;
 
   @include xs {
@@ -46,7 +46,7 @@
   }
 }
 
-.presentation_intro__title {
+.intro_presentation__title {
   margin-bottom: 30px;
   color: #b0ddf5;
 
@@ -61,7 +61,7 @@
   }
 }
 
-.presentation_intro__subtitle {
+.intro_presentation__subtitle {
   margin-bottom: 25px;
   line-height: 1;
   color: #198cca;
@@ -86,7 +86,7 @@
   }
 }
 
-.presentation_intro__subtitle_mobile {
+.intro_presentation__subtitle_mobile {
   display: none;
 
   @include xs {
@@ -108,7 +108,7 @@
   }
 }
 
-.presentation_intro__text {
+.intro_presentation__text {
   max-width: 720px;
   margin: 0 auto;
   line-height: 1.4;
@@ -125,5 +125,25 @@
     line-height: 143%;
     text-align: center;
     color: #35383f;
+  }
+}
+
+// recepies page
+
+.recepies-page {
+  .intro_presentation {
+    padding: 341px 0 268px;
+
+    @include lg {
+      padding: 120px 0 150px;
+    }
+
+    @include xs {
+      min-height: 611px;
+      padding: 180px 0 64px;
+    }
+  }
+  .intro_presentation__title {
+    color: #6daed1;
   }
 }
