--- a/sources/src/sass/blocks/intro_product.scss
+++ b/sources/src/sass/blocks/intro_product.scss
@@ -1,4 +1,4 @@
-.product_intro {
+.intro_product {
   position: relative;
   min-width: 320px;
   margin-bottom: 80px;
@@ -8,7 +8,7 @@
   }
 }
 
-.product_intro__bg {
+.intro_product__bg {
   position: absolute;
   top: 0;
   left: 0;
@@ -47,7 +47,7 @@
   }
 }
 
-.product_intro__container {
+.intro_product__container {
   padding: 180px 0 83px;
 
   @include lg {
@@ -59,7 +59,7 @@
   }
 }
 
-.product_intro__label {
+.intro_product__label {
   width: max-content;
   margin: 0 auto 50px;
   padding: 9px 20px;
@@ -74,7 +74,7 @@
   }
 }
 
-.product_intro__title {
+.intro_product__title {
   text-align: center;
   font-family: $font_title;
   font-weight: 400;
@@ -113,7 +113,7 @@
   }
 }
 
-.product_intro__images {
+.intro_product__images {
   position: relative;
   // width: 100%;
   max-width: 1464px;
@@ -136,7 +136,7 @@
   }
 }
 
-.product_intro__images__wrapper {
+.intro_product__images__wrapper {
   position: absolute;
   top: 0;
   left: 0;
@@ -148,7 +148,7 @@
   gap: 0 30px;
 }
 
-.product_intro__img {
+.intro_product__img {
   &:nth-child(1) {
     flex: 1 1 958px;
   }
